Bug 567750 - Build option to use the system Pixman. r=khuey. a=dougt
UltraBlame original commit: ae8d6fa8a42e5cff73c04548ab9761d33ec07e7f

--- a/configure.in
+++ b/configure.in
@@ -72131,6 +72131,37 @@ MOZ_TREE_CAIRO
 =
 1
 )
+MOZ_TREE_PIXMAN
+=
+1
+MOZ_ARG_ENABLE_BOOL
+(
+system
+-
+pixman
+[
+-
+-
+enable
+-
+system
+-
+pixman
+Use
+system
+pixman
+(
+located
+with
+pkgconfig
+)
+]
+MOZ_TREE_PIXMAN
+=
+MOZ_TREE_PIXMAN
+=
+1
+)
 #
 Check
 for
@@ -72894,6 +72925,23 @@ cairo
 /
 src
 )
+'
+"
+CAIRO_FT_LIBS
+"
+if
+test
+"
+MOZ_TREE_PIXMAN
+"
+;
+then
+MOZ_CAIRO_LIBS
+=
+"
+MOZ_CAIRO_LIBS
+"
+'
 (
 call
 EXPAND_LIBNAME_PATH
@@ -72911,9 +72959,34 @@ libpixman
 src
 )
 '
+else
+PKG_CHECK_MODULES
+(
+PIXMAN
+pixman
+-
+1
+>
+=
+0
+.
+17
+.
+3
+)
+MOZ_CAIRO_CFLAGS
+=
 "
-CAIRO_FT_LIBS
+MOZ_CAIRO_CFLAGS
+PIXMAN_CFLAGS
 "
+MOZ_CAIRO_LIBS
+=
+"
+MOZ_CAIRO_LIBS
+PIXMAN_LIBS
+"
+fi
 if
 test
 "
@@ -73029,6 +73102,10 @@ MOZ_CAIRO_CFLAGS
 AC_SUBST
 (
 MOZ_CAIRO_LIBS
+)
+AC_SUBST
+(
+MOZ_TREE_PIXMAN
 )
 dnl
 =
