--- a/gfx/cairo/Makefile.in
+++ b/gfx/cairo/Makefile.in
@@ -418,12 +418,18 @@ autoconf
 mk
 DIRS
 =
-libpixman
-/
-src
 cairo
 /
 src
+ifdef
+MOZ_TREE_PIXMAN
+DIRS
++
+=
+libpixman
+/
+src
+endif
 include
 (
 topsrcdir
