--- a/gfx/cairo/cairo/src/Makefile.in
+++ b/gfx/cairo/cairo/src/Makefile.in
@@ -1653,6 +1653,21 @@ DEFINES
 -
 DMOZ_TREE_CAIRO
 endif
+ifndef
+MOZ_TREE_PIXMAN
+CFLAGS
++
+=
+(
+MOZ_CAIRO_CFLAGS
+)
+CXXFLAGS
++
+=
+(
+MOZ_CAIRO_CFLAGS
+)
+endif
 cairo
 -
 features
