Replace deprecated API usage in nanojit/NativeARM. [Bug 535709] [r=njn]
UltraBlame original commit: fa6017442572693fdb2b842d7aca251bcc3c6b15

--- a/js/src/lirasm/tests/mul_xyy.in
+++ b/js/src/lirasm/tests/mul_xyy.in
@@ -17,19 +17,9 @@ immi
 46340
 res
 =
-mulxovi
+muli
 big
 big
-;
-no
-overflow
-so
-we
-don
-'
-t
-exit
-here
 ;
 Ensure
 that
@@ -50,19 +40,6 @@ with
 res
 '
 .
-;
-Also
-store
-'
-res
-'
-so
-it
-isn
-'
-t
-dead
-.
 m
 =
 allocp
@@ -71,12 +48,5 @@ sti
 big
 m
 0
-sti
+reti
 res
-m
-4
-x
-;
-we
-exit
-here
