--- a/js/src/lirasm/tests/muljovi_xxx.in
+++ b/js/src/lirasm/tests/muljovi_xxx.in
@@ -17,8 +17,30 @@ immi
 46340
 res
 =
-muli
+muljovi
 big
 big
+err
 reti
 res
+;
+-
+-
+-
+-
+Exit
+route
+for
+the
+error
+handler
+.
+err
+:
+e
+=
+immi
+-
+1
+reti
+e
