--- a/js/src/lirasm/tests/muljovi_xxy.in
+++ b/js/src/lirasm/tests/muljovi_xxy.in
@@ -21,8 +21,30 @@ immi
 2
 res
 =
-muli
+muljovi
 big
 two
+err
 reti
 res
+;
+-
+-
+-
+-
+Exit
+route
+for
+the
+error
+handler
+.
+err
+:
+e
+=
+immi
+-
+1
+reti
+e
