--- a/js/src/lirasm/tests/muljovi_xyy.in
+++ b/js/src/lirasm/tests/muljovi_xyy.in
@@ -1,7 +1,7 @@
 ;
-1073741823
+46340
 *
-2
+46340
 <
 2
 ^
@@ -14,33 +14,25 @@ overflow
 big
 =
 immi
-1073741823
-two
-=
-immi
-2
+46340
 res
 =
-muli
+muljovi
 big
-two
+big
+err
 ;
 Ensure
 that
 '
 big
 '
-and
-'
-two
-'
-get
-their
+gets
+its
 own
-registers
+register
 and
-;
-aren
+isn
 '
 t
 shared
@@ -52,14 +44,31 @@ res
 m
 =
 allocp
-12
+8
 sti
 big
 m
 0
-sti
-two
-m
-4
 reti
 res
+;
+-
+-
+-
+-
+Exit
+route
+for
+the
+error
+handler
+.
+err
+:
+e
+=
+immi
+-
+1
+reti
+e
