--- a/js/src/lirasm/tests/muljovi_xyz.in
+++ b/js/src/lirasm/tests/muljovi_xyz.in
@@ -21,9 +21,10 @@ immi
 2
 res
 =
-muli
+muljovi
 big
 two
+err
 ;
 Ensure
 that
@@ -63,3 +64,24 @@ m
 4
 reti
 res
+;
+-
+-
+-
+-
+Exit
+route
+for
+the
+error
+handler
+.
+err
+:
+e
+=
+immi
+-
+1
+reti
+e
