--- a/browser/components/sessionstore/test/browser/Makefile.in
+++ b/browser/components/sessionstore/test/browser/Makefile.in
@@ -760,15 +760,6 @@ browser_586147
 .
 js
 \
-#
-ifndef
-XP_MACOSX
-browser_597071
-.
-js
-\
-#
-endif
 browser_586068
 -
 cascaded_restore
@@ -778,6 +769,25 @@ js
 (
 NULL
 )
+ifneq
+(
+(
+OS_ARCH
+)
+Darwin
+)
+_BROWSER_TEST_FILES
++
+=
+\
+browser_597071
+.
+js
+\
+(
+NULL
+)
+endif
 libs
 :
 :
