Bug 597465: Support linking app components into libxul. r=khuey a=blocking
UltraBlame original commit: daeead199d451b97e9df98235bdce2c2fc7fad5f

--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -2154,6 +2154,12 @@ HAVE_CLOCK_MONOTONIC
 REALTIME_LIBS
 =
 REALTIME_LIBS
+MOZ_APP_COMPONENT_LIBS
+=
+MOZ_APP_COMPONENT_LIBS
+MOZ_APP_EXTRA_LIBS
+=
+MOZ_APP_EXTRA_LIBS
 ANDROID_NDK
 =
 ANDROID_NDK
