--- a/configure.in
+++ b/configure.in
@@ -74861,6 +74861,21 @@ then
 MOZ_COMPONENTS_VERSION_SCRIPT_LDFLAGS
 =
 fi
+if
+test
+"
+MOZ_APP_COMPONENT_INCLUDE
+"
+;
+then
+AC_DEFINE_UNQUOTED
+(
+MOZ_APP_COMPONENT_INCLUDE
+"
+MOZ_APP_COMPONENT_INCLUDE
+"
+)
+fi
 dnl
 =
 =
@@ -75885,6 +75900,14 @@ NS_ENABLE_TSF
 AC_SUBST
 (
 MOZ_NSS_PATCH
+)
+AC_SUBST
+(
+MOZ_APP_COMPONENT_LIBS
+)
+AC_SUBST
+(
+MOZ_APP_EXTRA_LIBS
 )
 AC_SUBST
 (
