Bug 596668: Incremental builds fail in toolkit/mozapps/extensions. r=ted, a=tests
UltraBlame original commit: 7bc76cad3f23773935c0622e5a29a30033f2b17b

--- a/toolkit/mozapps/extensions/test/Makefile.in
+++ b/toolkit/mozapps/extensions/test/Makefile.in
@@ -574,16 +574,23 @@ xpi
 done
 \
 fi
-cp
--
-pPR
+cd
 (
 TESTROOT
 )
 /
 xpcshell
 /
+&
+&
+tar
+-
+cPf
+-
 .
+|
+(
+cd
 (
 TESTROOT
 )
@@ -591,3 +598,10 @@ TESTROOT
 xpcshell
 -
 unpack
+&
+&
+tar
+-
+xPvf
+-
+)
