Bug 599076: Disable test_crashing.html on Mac OS X for now. Bustage fix. a=josh
UltraBlame original commit: 408d1fae901b17fa4a3fa81caa566d1d9fa15f34

--- a/modules/plugin/test/mochitest/Makefile.in
+++ b/modules/plugin/test/mochitest/Makefile.in
@@ -598,10 +598,6 @@ test_newstreamondestroy
 .
 html
 \
-test_crashing
-.
-html
-\
 (
 warning
 test_crashing2
@@ -745,6 +741,35 @@ xul
 NULL
 )
 endif
+endif
+#
+Temporarily
+disable
+this
+test
+on
+Mac
+OS
+X
+.
+ifneq
+(
+cocoa
+(
+MOZ_WIDGET_TOOLKIT
+)
+)
+_MOCHITEST_FILES
++
+=
+\
+test_crashing
+.
+html
+\
+(
+NULL
+)
 endif
 ifeq
 (
