Bug 492849 - Implement Object.preventExtensions, Object.isExtensible. a=waldo,jimb, r=brendan
UltraBlame original commit: aa9b86572020691b6dc8d6072598c3364d431273

--- a/js/src/jsapi-tests/Makefile.in
+++ b/js/src/jsapi-tests/Makefile.in
@@ -453,6 +453,10 @@ testDebugger
 .
 cpp
 \
+testDeepFreeze
+.
+cpp
+\
 testDefineGetterSetterNonEnumerable
 .
 cpp
@@ -465,11 +469,11 @@ testExtendedEq
 .
 cpp
 \
-testGCChunkAlloc
+testFuncCallback
 .
 cpp
 \
-testFuncCallback
+testGCChunkAlloc
 .
 cpp
 \
@@ -497,19 +501,11 @@ testPropCache
 .
 cpp
 \
-testTrap
-.
-cpp
-\
 testSameValue
 .
 cpp
 \
-testSeal
-.
-cpp
-\
-testXDR
+testScriptObject
 .
 cpp
 \
@@ -517,7 +513,11 @@ testSetPropertyWithNativeGetterStubSetter
 .
 cpp
 \
-testScriptObject
+testTrap
+.
+cpp
+\
+testXDR
 .
 cpp
 \
