Temporarily disable a few ctypes tests pending fix for bug 598225.
UltraBlame original commit: 15143958df73cd5c6d7c9bdb015f0079a7173573

--- a/toolkit/components/ctypes/tests/unit/test_jsctypes.js.in
+++ b/toolkit/components/ctypes/tests/unit/test_jsctypes.js.in
@@ -15594,6 +15594,14 @@ ctypes
 int8_t
 )
 ;
+/
+*
+disabled
+temporarily
+per
+bug
+598225
+.
 do_check_throws
 (
 function
@@ -15673,6 +15681,8 @@ e
 Error
 )
 ;
+*
+/
 /
 /
 Check
@@ -19578,6 +19588,14 @@ argTypes
 fp_t
 )
 ;
+/
+*
+disabled
+temporarily
+per
+bug
+598225
+.
 do_check_throws
 (
 function
@@ -19615,6 +19633,8 @@ argTypes
 Error
 )
 ;
+*
+/
 let
 t4_t
 =
@@ -22890,6 +22910,14 @@ ptr
 "
 )
 ;
+/
+*
+disabled
+temporarily
+per
+bug
+598225
+.
 do_check_throws
 (
 function
@@ -22918,6 +22946,8 @@ ptr
 )
 )
 ;
+*
+/
 /
 /
 Test
@@ -22969,6 +22999,14 @@ test_ansi_len_2
 )
 )
 ;
+/
+*
+disabled
+temporarily
+per
+bug
+598225
+.
 do_check_throws
 (
 function
@@ -22997,6 +23035,8 @@ ptr
 )
 )
 ;
+*
+/
 }
 function
 run_closure_tests
