Bug 599378: Disabled test_hanging.html on Mac OS X for now. a=josh
UltraBlame original commit: 8a81c455ece0950d531e611e892440185d5e12c0

--- a/modules/plugin/test/mochitest/Makefile.in
+++ b/modules/plugin/test/mochitest/Makefile.in
@@ -614,10 +614,6 @@ bug
 566049
 )
 \
-test_hanging
-.
-html
-\
 crashing_subpage
 .
 html
@@ -774,6 +770,10 @@ bug
 and
 bug
 599267
+#
+and
+bug
+599378
 .
 ifneq
 (
@@ -787,6 +787,10 @@ _MOCHITEST_FILES
 =
 \
 test_crashing
+.
+html
+\
+test_hanging
 .
 html
 \
