Bug 596762: Allow specification of differing IPC preferences for each architecture in a universal binary. r=josh a=blocking-b7
UltraBlame original commit: d52c4d0882738391f79e16d9e09f63a1e717a7ff

--- a/modules/plugin/test/mochitest/Makefile.in
+++ b/modules/plugin/test/mochitest/Makefile.in
@@ -679,10 +679,6 @@ endif
 _MOCHICHROME_FILES
 =
 \
-test_bug479979
-.
-xul
-\
 test_npruntime
 .
 xul
@@ -719,6 +715,26 @@ OS_ARCH
 )
 Linux
 )
+#
+Temporarily
+disable
+the
+tests
+on
+Mac
+OS
+X
+see
+bug
+599087
+.
+ifneq
+(
+cocoa
+(
+MOZ_WIDGET_TOOLKIT
+)
+)
 ifdef
 MOZ_CRASHREPORTER
 _MOCHICHROME_FILES
@@ -742,15 +758,22 @@ NULL
 )
 endif
 endif
+endif
 #
 Temporarily
 disable
-this
-test
+these
+tests
 on
 Mac
 OS
 X
+see
+bug
+599076
+and
+bug
+599267
 .
 ifneq
 (
@@ -766,6 +789,17 @@ _MOCHITEST_FILES
 test_crashing
 .
 html
+\
+(
+NULL
+)
+_MOCHICHROME_FILES
++
+=
+\
+test_bug479979
+.
+xul
 \
 (
 NULL
