--- a/configure.in
+++ b/configure.in
@@ -47049,11 +47049,95 @@ greater
 .
 if
 test
+-
+z
+"
+YASM
+"
+;
+then
+AC_MSG_ERROR
+(
+[
+yasm
+1
+.
+1
+or
+greater
+is
+required
+to
+build
+libvpx
+on
+Win32
+but
+it
+appears
+not
+to
+be
+installed
+.
+Install
+it
+(
+included
+in
+MozillaBuild
+1
+.
+5
+.
+1
+and
+newer
+)
+or
+configure
+with
+-
+-
+disable
+-
+webm
+(
+which
+disables
+the
+WebM
+video
+format
+)
+.
+See
+https
+:
+/
+/
+developer
+.
+mozilla
+.
+org
+/
+en
+/
+YASM
+for
+more
+details
+.
+]
+)
+elif
+test
 "
 _YASM_MAJOR_VERSION
 "
 -
-gt
+lt
 "
 1
 "
@@ -47075,7 +47159,7 @@ a
 _YASM_MINOR_VERSION
 "
 -
-ge
+lt
 "
 1
 "
@@ -47083,23 +47167,6 @@ ge
 )
 ;
 then
-VPX_ASFLAGS
-=
-"
--
-f
-win32
--
-rnasm
--
-pnasm
--
-DPIC
-"
-VPX_X86_ASM
-=
-1
-else
 AC_MSG_ERROR
 (
 [
@@ -47180,6 +47247,23 @@ details
 .
 ]
 )
+else
+VPX_ASFLAGS
+=
+"
+-
+f
+win32
+-
+rnasm
+-
+pnasm
+-
+DPIC
+"
+VPX_X86_ASM
+=
+1
 fi
 fi
 ;
@@ -47187,8 +47271,10 @@ fi
 esac
 if
 test
+-
+n
 "
-COMPILE_ENVIROMENT
+COMPILE_ENVIRONMENT
 "
 -
 a
