Bug 599567: Followup to make new checks conditioned on COMPILE_ENVIRONMENT too. r=me a=me
UltraBlame original commit: 71e8b5aee972e1cd17226463be7a31b71dc50774

--- a/configure.in
+++ b/configure.in
@@ -47050,6 +47050,13 @@ greater
 if
 test
 -
+n
+"
+COMPILE_ENVIRONMENT
+"
+-
+a
+-
 z
 "
 YASM
@@ -47133,6 +47140,13 @@ details
 )
 elif
 test
+-
+n
+"
+COMPILE_ENVIRONMENT
+"
+-
+a
 "
 _YASM_MAJOR_VERSION
 "
