--- a/toolkit/mozapps/plugins/tests/Makefile.in
+++ b/toolkit/mozapps/plugins/tests/Makefile.in
@@ -455,10 +455,6 @@ MOZ_BUILD_APP
 _BROWSER_FILES
 =
 \
-browser_bug435788
-.
-js
-\
 pfs_bug435788_1
 .
 rdf
@@ -478,6 +474,21 @@ xpi
 (
 NULL
 )
+ifneq
+(
+(
+OS_ARCH
+)
+Darwin
+)
+_BROWSER_FILES
++
+=
+\
+browser_bug435788
+.
+js
+endif
 endif
 CPPSRCS
 =
