Bug 599322 - Base href ignored for drag/drop or copy/paste in designMode; r=roc a=blocking-final,1.9.2.11,1.9.1.14
UltraBlame original commit: b1a8e09a13f4b5800c389248b3db8b8fe703f0a0

--- a/editor/libeditor/html/tests/Makefile.in
+++ b/editor/libeditor/html/tests/Makefile.in
@@ -436,6 +436,10 @@ mk
 _TEST_FILES
 =
 \
+green
+.
+png
+\
 test_bug332636
 .
 html
@@ -500,6 +504,10 @@ test_bug592592
 html
 \
 test_bug597784
+.
+html
+\
+test_bug599322
 .
 html
 \
