bug 591818 - Display error message for incompatible CPU r=mwu ui-r=beltzner a=blocking-fennec
UltraBlame original commit: 9727eb08513b04a9b73ed2a709d43ffc461cc656

--- a/embedding/android/Makefile.in
+++ b/embedding/android/Makefile.in
@@ -471,6 +471,27 @@ java
 (
 NULL
 )
+ifneq
+(
+(
+findstring
+-
+march
+=
+armv7
+(
+OS_CFLAGS
+)
+)
+)
+MIN_CPU_VERSION
+=
+7
+else
+MIN_CPU_VERSION
+=
+5
+endif
 DEFINES
 +
 =
@@ -501,6 +522,17 @@ DMOZ_CHILD_PROCESS_NAME
 =
 (
 MOZ_CHILD_PROCESS_NAME
+)
+\
+-
+DMOZ_MIN_CPU_VERSION
+=
+(
+MIN_CPU_VERSION
+)
+\
+(
+NULL
 )
 GARBAGE
 +
