--- a/embedding/android/App.java.in
+++ b/embedding/android/App.java.in
@@ -7,6 +7,14 @@ Mode
 :
 Java
 ;
+c
+-
+basic
+-
+offset
+:
+4
+;
 tab
 -
 width
@@ -462,6 +470,16 @@ return
 "
 MOZ_CHILD_PROCESS_NAME
 "
+;
+}
+public
+int
+getMinCPUVersion
+(
+)
+{
+return
+MOZ_MIN_CPU_VERSION
 ;
 }
 }
