bug 600214 - Use string resources for android java files r=mwu a=blocking-fennec
UltraBlame original commit: f56345a8fdd927db980153aa9a9615bd8cede3e5

--- a/embedding/android/Makefile.in
+++ b/embedding/android/Makefile.in
@@ -574,6 +574,18 @@ unaligned
 .
 apk
 \
+res
+/
+values
+/
+strings
+.
+xml
+\
+R
+.
+java
+\
 (
 NULL
 )
@@ -891,6 +903,30 @@ ANDROID_SDK
 android
 .
 jar
+DEFAULT_BRANDPATH
+=
+(
+DEPTH
+)
+/
+(
+MOZ_BRANDING_DIRECTORY
+)
+/
+locales
+/
+en
+-
+US
+/
+brand
+.
+dtd
+DEFAULT_STRINGSPATH
+=
+android_strings
+.
+dtd
 include
 (
 topsrcdir
@@ -1194,6 +1230,19 @@ RES_DRAWABLE
 (
 RES_DRAWABLE_HDPI
 )
+res
+/
+values
+/
+strings
+.
+xml
+(
+LOCALIZED_STRINGS_XML
+)
+AndroidManifest
+.
+xml
 (
 AAPT
 )
@@ -1258,6 +1307,16 @@ RES_DRAWABLE
 )
 (
 RES_DRAWABLE_HDPI
+)
+res
+/
+values
+/
+strings
+.
+xml
+(
+LOCALIZED_STRINGS_XML
 )
 (
 AAPT
@@ -1607,3 +1666,63 @@ gecko
 unaligned
 .
 apk
+res
+/
+values
+/
+strings
+.
+xml
+:
+FORCE
+mkdir
+-
+p
+res
+/
+values
+(
+PYTHON
+)
+(
+topsrcdir
+)
+/
+config
+/
+Preprocessor
+.
+py
+(
+DEFINES
+)
+\
+-
+DBRANDPATH
+=
+"
+(
+DEFAULT_BRANDPATH
+)
+"
+\
+-
+DSTRINGSPATH
+=
+"
+(
+DEFAULT_STRINGSPATH
+)
+"
+\
+(
+srcdir
+)
+/
+strings
+.
+xml
+.
+in
+\
+>
