Bug 558861 - Compartmental GC (r=gal)
UltraBlame original commit: 1c913526c597640d9da597d180b0fe1e2fe2d2ad

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -773,6 +773,10 @@ jsgcstats
 .
 cpp
 \
+jscompartment
+.
+cpp
+\
 jshash
 .
 cpp
@@ -985,11 +989,19 @@ jsgc
 .
 h
 \
+jscell
+.
+h
+\
 jsgcchunk
 .
 h
 \
 jsgcstats
+.
+h
+\
+jscompartment
 .
 h
 \
