--- a/configure.in
+++ b/configure.in
@@ -35722,7 +35722,7 @@ AM_PATH_NSS
 .
 12
 .
-8
+6
 [
 MOZ_NATIVE_NSS
 =
@@ -47049,109 +47049,11 @@ greater
 .
 if
 test
--
-n
-"
-COMPILE_ENVIRONMENT
-"
--
-a
--
-z
-"
-YASM
-"
-;
-then
-AC_MSG_ERROR
-(
-[
-yasm
-1
-.
-1
-or
-greater
-is
-required
-to
-build
-libvpx
-on
-Win32
-but
-it
-appears
-not
-to
-be
-installed
-.
-Install
-it
-(
-included
-in
-MozillaBuild
-1
-.
-5
-.
-1
-and
-newer
-)
-or
-configure
-with
--
--
-disable
--
-webm
-(
-which
-disables
-the
-WebM
-video
-format
-)
-.
-See
-https
-:
-/
-/
-developer
-.
-mozilla
-.
-org
-/
-en
-/
-YASM
-for
-more
-details
-.
-]
-)
-elif
-test
--
-n
-"
-COMPILE_ENVIRONMENT
-"
--
-a
 "
 _YASM_MAJOR_VERSION
 "
 -
-lt
+gt
 "
 1
 "
@@ -47173,7 +47075,7 @@ a
 _YASM_MINOR_VERSION
 "
 -
-lt
+ge
 "
 1
 "
@@ -47181,6 +47083,23 @@ lt
 )
 ;
 then
+VPX_ASFLAGS
+=
+"
+-
+f
+win32
+-
+rnasm
+-
+pnasm
+-
+DPIC
+"
+VPX_X86_ASM
+=
+1
+else
 AC_MSG_ERROR
 (
 [
@@ -47261,23 +47180,6 @@ details
 .
 ]
 )
-else
-VPX_ASFLAGS
-=
-"
--
-f
-win32
--
-rnasm
--
-pnasm
--
-DPIC
-"
-VPX_X86_ASM
-=
-1
 fi
 fi
 ;
@@ -47285,10 +47187,8 @@ fi
 esac
 if
 test
--
-n
 "
-COMPILE_ENVIRONMENT
+COMPILE_ENVIROMENT
 "
 -
 a
@@ -69753,6 +69653,25 @@ MOZ_ENABLE_LIBXUL
 MOZ_ENABLE_LIBXUL
 =
 )
+#
+split
+JS
+out
+by
+default
+to
+avoid
+VS2005
+PGO
+crash
+(
+bug
+591836
+)
+.
+ENABLE_SHARED_JS
+=
+1
 MOZ_ARG_ENABLE_BOOL
 (
 shared
