Bug 594718 lock_sparc*.il should not be used on x86 machine r=ted.mielczarek
UltraBlame original commit: 4109d15945e5d3c618721a8bf643f8aeeee16e27

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -3738,6 +3738,12 @@ endif
 endif
 ifdef
 SOLARIS_SUNPRO_CXX
+ifeq
+(
+(
+TARGET_CPU
+)
+sparc
 #
 Sun
 Studio
@@ -3829,6 +3835,9 @@ il
 endif
 #
 sparcv9
+endif
+#
+sparc
 endif
 #
 SOLARIS_SUNPRO_CXX
