Bug 600373 - Android not starting on Tracemonkey due to ENABLE_SHARED_JS=1. r=khuey.
UltraBlame original commit: 49890751e2558589f395c99ce9c7091c9b4f1f84

--- a/configure.in
+++ b/configure.in
@@ -69769,9 +69769,21 @@ bug
 591836
 )
 .
+if
+test
+"
+OS_ARCH
+"
+=
+"
+WINNT
+"
+;
+then
 ENABLE_SHARED_JS
 =
 1
+fi
 MOZ_ARG_ENABLE_BOOL
 (
 shared
