Bug 597056. Firefox browser-chrome tests are ending up in Fennec. ifdef them away for mobile builds. r=mfinkle. a=sayrer
UltraBlame original commit: f7ed48f9394111519cb707814037fad008a1b87e

--- a/dom/indexedDB/test/Makefile.in
+++ b/dom/indexedDB/test/Makefile.in
@@ -570,6 +570,13 @@ html
 (
 NULL
 )
+ifneq
+(
+mobile
+(
+MOZ_BUILD_APP
+)
+)
 BROWSER_TEST_FILES
 =
 \
@@ -612,38 +619,6 @@ libs
 :
 :
 (
-TEST_FILES
-)
-(
-INSTALL
-)
-(
-foreach
-f
-^
-"
-f
-"
-)
-(
-DEPTH
-)
-/
-_tests
-/
-testing
-/
-mochitest
-/
-tests
-/
-(
-relativesrcdir
-)
-libs
-:
-:
-(
 BROWSER_TEST_FILES
 )
 (
@@ -668,6 +643,39 @@ testing
 mochitest
 /
 browser
+/
+(
+relativesrcdir
+)
+endif
+libs
+:
+:
+(
+TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+tests
 /
 (
 relativesrcdir
