--- a/modules/libpr0n/test/Makefile.in
+++ b/modules/libpr0n/test/Makefile.in
@@ -443,11 +443,25 @@ DIRS
 =
 mochitest
 \
+(
+NULL
+)
+ifneq
+(
+mobile
+(
+MOZ_BUILD_APP
+)
+)
+DIRS
++
+=
 browser
 \
 (
 NULL
 )
+endif
 include
 (
 topsrcdir
