b=599698; remove UpdateSurfaceClip speedtrap in canvas drawImage; r+a=shaver
UltraBlame original commit: 98559eb0a7837e265a3d93967877186962bea651

--- a/content/canvas/test/Makefile.in
+++ b/content/canvas/test/Makefile.in
@@ -565,13 +565,11 @@ test_2d
 .
 composite
 .
-uncovered
+canvas
 .
-image
-.
-source
+destination
 -
-in
+atop
 .
 html
 \
@@ -579,9 +577,7 @@ test_2d
 .
 composite
 .
-uncovered
-.
-image
+canvas
 .
 destination
 -
@@ -593,9 +589,19 @@ test_2d
 .
 composite
 .
-uncovered
+canvas
 .
-image
+source
+-
+in
+.
+html
+\
+test_2d
+.
+composite
+.
+canvas
 .
 source
 -
@@ -607,13 +613,47 @@ test_2d
 .
 composite
 .
-uncovered
-.
 image
 .
 destination
 -
 atop
+.
+html
+\
+test_2d
+.
+composite
+.
+image
+.
+destination
+-
+in
+.
+html
+\
+test_2d
+.
+composite
+.
+image
+.
+source
+-
+in
+.
+html
+\
+test_2d
+.
+composite
+.
+image
+.
+source
+-
+out
 .
 html
 \
@@ -773,69 +813,55 @@ need
 to
 reevaluate
 tests
-#
-#
-test_2d
 .
-composite
-.
+#
+At
+one
+point
+we
+were
+passing
+these
+accidentally
+because
+the
+UpdateSurfaceClip
+at
+the
+end
+#
+of
+drawImage
+happened
+to
+clear
+the
+entire
 canvas
+with
+some
+operators
+which
+is
+what
+these
+#
+tests
+were
+checking
 .
-destination
--
-atop
-.
-html
-\
 #
 test_2d
 .
 composite
 .
-canvas
-.
-destination
--
-in
-.
-html
-\
-#
-test_2d
-.
-composite
-.
-canvas
-.
-source
--
-in
-.
-html
-\
-#
-test_2d
-.
-composite
-.
-canvas
-.
-source
--
-out
-.
-html
-\
-#
-test_2d
-.
-composite
+uncovered
 .
 image
 .
-destination
+source
 -
-atop
+in
 .
 html
 \
@@ -843,6 +869,8 @@ html
 test_2d
 .
 composite
+.
+uncovered
 .
 image
 .
@@ -857,18 +885,7 @@ test_2d
 .
 composite
 .
-image
-.
-source
--
-in
-.
-html
-\
-#
-test_2d
-.
-composite
+uncovered
 .
 image
 .
@@ -879,6 +896,20 @@ out
 html
 \
 #
+test_2d
+.
+composite
+.
+uncovered
+.
+image
+.
+destination
+-
+atop
+.
+html
+\
 #
 Tests
 that
