--- a/toolkit/components/passwordmgr/test/Makefile.in
+++ b/toolkit/components/passwordmgr/test/Makefile.in
@@ -427,7 +427,7 @@ DEPTH
 /
 config
 /
-autoconf
+config
 .
 mk
 ifneq
@@ -522,10 +522,6 @@ test_bug_242956
 .
 html
 \
-test_privbrowsing
-.
-html
-\
 test_bug_360493_1
 .
 html
@@ -555,14 +551,6 @@ test_master_password_cleanup
 html
 \
 test_prompt_async
-.
-html
-\
-test_notifications
-.
-html
-\
-test_prompt
 .
 html
 \
@@ -671,6 +659,85 @@ html
 (
 NULL
 )
+#
+Don
+'
+t
+run
+these
+tests
+in
+suite
+ifndef
+MOZ_SUITE
+MOCHI_TESTS
++
+=
+\
+test_privbrowsing
+.
+html
+\
+test_prompt
+.
+html
+\
+test_notifications
+.
+html
+\
+(
+NULL
+)
+else
+(
+warning
+test_prompt
+.
+html
+is
+disabled
+until
+doorhanger
+notfications
+work
+.
+Bug
+598360
+)
+(
+warning
+test_notifications
+.
+html
+is
+disabled
+until
+doorhanger
+notfications
+work
+.
+Bug
+598360
+)
+(
+warning
+test_privbrowsing
+.
+html
+is
+disabled
+due
+to
+doorhangers
+Bug
+598360
+and
+no
+privatebrowsing
+support
+)
+endif
 XPCSHELL_TESTS
 =
 unit
