bug 582616 - Sharing back-end for Android r=mwu,mfinkle sr=stuart a=blocking-fennec
UltraBlame original commit: 8a6554580c4ee65421645ba65e7868472199fac6

--- a/uriloader/exthandler/Makefile.in
+++ b/uriloader/exthandler/Makefile.in
@@ -654,6 +654,18 @@ OSHELPER
 nsAndroidHandlerApp
 .
 cpp
+OSHELPER
++
+=
+nsExternalSharingAppService
+.
+cpp
+EXPORTS
++
+=
+nsExternalSharingAppService
+.
+h
 endif
 ifeq
 (
@@ -745,6 +757,7 @@ ExternalHelperAppChild
 .
 h
 EXPORTS
++
 =
 \
 (
@@ -752,6 +765,10 @@ OSDIR
 )
 /
 nsOSHelperAppService
+.
+h
+\
+nsExternalHelperAppService
 .
 h
 \
@@ -782,6 +799,10 @@ nsIContentDispatchChooser
 idl
 \
 nsIHandlerService
+.
+idl
+\
+nsIExternalSharingAppService
 .
 idl
 \
