bug 589906 - Fennec hangs at startup with black screen when out of disk space r=mwu uir=beltzner a=blocking-fennec
UltraBlame original commit: 71ab2e2fa1cce4d0a2d702f352c267856c747f0e

--- a/embedding/android/strings.xml.in
+++ b/embedding/android/strings.xml.in
@@ -67,6 +67,36 @@ incompatable_cpu_error
 string
 >
 <
+string
+name
+=
+"
+no_space_to_start_error
+"
+>
+&
+no_space_to_start_error
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
+error_loading_file
+"
+>
+&
+error_loading_file
+;
+<
+/
+string
+>
+<
 /
 resources
 >
