Bug 546514 - Part 2: Add #defines for D3D10 layers. r=vlad
UltraBlame original commit: 64d63f171108c98b409c21489b45eec21b49e804

--- a/widget/src/windows/Makefile.in
+++ b/widget/src/windows/Makefile.in
@@ -640,6 +640,14 @@ DEFINES
 DMOZ_ENABLE_D3D9_LAYER
 endif
 ifdef
+MOZ_ENABLE_D3D10_LAYER
+DEFINES
++
+=
+-
+DMOZ_ENABLE_D3D10_LAYER
+endif
+ifdef
 BUILD_STATIC_LIBS
 DEFINES
 +
