--- a/gfx/thebes/Makefile.in
+++ b/gfx/thebes/Makefile.in
@@ -964,6 +964,14 @@ DEFINES
 -
 DMOZ_ENABLE_D3D9_LAYER
 endif
+ifdef
+MOZ_ENABLE_D3D10_LAYER
+DEFINES
++
+=
+-
+DMOZ_ENABLE_D3D10_LAYER
+endif
 ACDEFINES
 +
 =
