--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -1785,6 +1785,9 @@ MOZ_ENABLE_D2D_SURFACE
 MOZ_ENABLE_D3D9_LAYER
 =
 MOZ_ENABLE_D3D9_LAYER
+MOZ_ENABLE_D3D10_LAYER
+=
+MOZ_ENABLE_D3D10_LAYER
 MOZ_GTK2_CFLAGS
 =
 MOZ_GTK2_CFLAGS
