--- a/configure.in
+++ b/configure.in
@@ -72569,6 +72569,15 @@ MOZ_ENABLE_D3D9_LAYER
 =
 1
 )
+AC_CHECK_HEADER
+(
+d3d10
+.
+h
+MOZ_ENABLE_D3D10_LAYER
+=
+1
+)
 AC_TRY_COMPILE
 (
 [
@@ -72908,6 +72917,10 @@ MOZ_ENABLE_D2D_SURFACE
 AC_SUBST
 (
 MOZ_ENABLE_D3D9_LAYER
+)
+AC_SUBST
+(
+MOZ_ENABLE_D3D10_LAYER
 )
 AC_SUBST
 (
