Bug 546514 - Part 4: Build D3D10 layers. r=vlad
UltraBlame original commit: 2f24116f41a3be0f73048271e961f2a771891b72

--- a/gfx/layers/Makefile.in
+++ b/gfx/layers/Makefile.in
@@ -430,6 +430,12 @@ srcdir
 d3d9
 \
 (
+srcdir
+)
+/
+d3d10
+\
+(
 NULL
 )
 include
@@ -607,6 +613,51 @@ DeviceManagerD3D9
 cpp
 \
 Nv3DVUtils
+.
+cpp
+\
+(
+NULL
+)
+endif
+ifdef
+MOZ_ENABLE_D3D10_LAYER
+EXPORTS
++
+=
+\
+LayerManagerD3D10
+.
+h
+\
+(
+NULL
+)
+CPPSRCS
++
+=
+\
+LayerManagerD3D10
+.
+cpp
+\
+ThebesLayerD3D10
+.
+cpp
+\
+ContainerLayerD3D10
+.
+cpp
+\
+ImageLayerD3D10
+.
+cpp
+\
+ColorLayerD3D10
+.
+cpp
+\
+CanvasLayerD3D10
 .
 cpp
 \
