Bug 543800 Package chrome style tests into .jar file for Android testing r=ted a=NPOTB
UltraBlame original commit: 7e4f8cb08cbaa5b15016689775b832876b8e0073

--- a/testing/mochitest/runtests.py.in
+++ b/testing/mochitest/runtests.py.in
@@ -425,6 +425,10 @@ harness
 "
 "
 from
+__future__
+import
+with_statement
+from
 datetime
 import
 datetime
@@ -2958,12 +2962,9 @@ poll
 (
 )
 if
-(
 rtncode
-=
-=
+is
 None
-)
 :
 self
 .
@@ -4735,12 +4736,9 @@ buildBrowserEnv
 options
 )
 if
-(
 browserEnv
-=
-=
+is
 None
-)
 :
 return
 1
@@ -4752,6 +4750,13 @@ buildProfile
 (
 options
 )
+if
+manifest
+is
+None
+:
+return
+1
 self
 .
 startWebServer
@@ -4779,7 +4784,6 @@ buildURLOptions
 options
 )
 if
-(
 len
 (
 self
@@ -4788,7 +4792,6 @@ urlOpts
 )
 >
 0
-)
 :
 testURL
 +
@@ -5048,6 +5051,12 @@ end
 .
 "
 )
+if
+manifest
+is
+not
+None
+:
 self
 .
 cleanup
@@ -5475,34 +5484,17 @@ temp_file
 w
 "
 )
-manifestFile
-.
-write
-(
-"
-content
-mochikit
-"
-+
-chrometestDir
-+
-"
-contentaccessible
+browser_chrome
 =
-yes
-\
-n
 "
-)
+"
 if
 options
 .
 browserChrome
 :
-manifestFile
-.
-write
-(
+browser_chrome
+=
 "
 "
 "
@@ -5563,9 +5555,7 @@ xul
 "
 "
 "
-)
 elif
-(
 (
 options
 .
@@ -5582,7 +5572,6 @@ a11y
 =
 =
 False
-)
 )
 :
 #
@@ -5618,10 +5607,9 @@ dialogs
 when
 using
 ipc
-manifestFile
-.
-write
-(
+browser_chrome
++
+=
 "
 overlay
 chrome
@@ -5648,7 +5636,108 @@ ipc
 overlay
 .
 xul
+\
+n
 "
+jarDir
+=
+'
+mochijar
+'
+if
+not
+os
+.
+path
+.
+exists
+(
+os
+.
+path
+.
+join
+(
+self
+.
+SCRIPT_DIRECTORY
+jarDir
+)
+)
+:
+print
+"
+TEST
+-
+UNEXPECTED
+-
+FAIL
+|
+invalid
+setup
+:
+missing
+mochikit
+extension
+"
+return
+None
+if
+self
+.
+installTestsJar
+(
+options
+)
+:
+manifestFile
+.
+write
+(
+"
+content
+mochitests
+jar
+:
+tests
+.
+jar
+!
+/
+content
+/
+\
+n
+"
+)
+;
+else
+:
+manifestFile
+.
+write
+(
+"
+content
+mochitests
+%
+s
+contentaccessible
+=
+yes
+\
+n
+"
+%
+chrometestDir
+)
+self
+.
+installChromeJar
+(
+jarDir
+browser_chrome
+options
 )
 manifestFile
 .
@@ -5664,6 +5753,193 @@ temp_file
 options
 )
 def
+installChromeJar
+(
+self
+jarDirName
+browser_chrome
+options
+)
+:
+"
+"
+"
+copy
+mochijar
+directory
+to
+profile
+as
+an
+extension
+so
+we
+have
+chrome
+:
+/
+/
+mochikit
+for
+all
+harness
+code
+"
+"
+"
+jarDir
+=
+os
+.
+path
+.
+join
+(
+options
+.
+profilePath
+'
+extensions
+'
+'
+mochikit
+mozilla
+.
+org
+'
+)
+shutil
+.
+copytree
+(
+os
+.
+path
+.
+join
+(
+self
+.
+SCRIPT_DIRECTORY
+jarDirName
+)
+jarDir
+)
+with
+open
+(
+os
+.
+path
+.
+join
+(
+jarDir
+"
+chrome
+.
+manifest
+"
+)
+'
+a
+'
+)
+as
+mfile
+:
+mfile
+.
+write
+(
+browser_chrome
+)
+return
+jarDir
+def
+installTestsJar
+(
+self
+options
+)
+:
+"
+"
+"
+copy
+tests
+.
+jar
+to
+the
+profile
+directory
+so
+we
+can
+auto
+register
+it
+in
+the
+.
+xul
+harness
+"
+"
+"
+if
+os
+.
+path
+.
+exists
+(
+os
+.
+path
+.
+join
+(
+self
+.
+SCRIPT_DIRECTORY
+'
+tests
+.
+jar
+'
+)
+)
+:
+shutil
+.
+copy
+(
+os
+.
+path
+.
+join
+(
+self
+.
+SCRIPT_DIRECTORY
+'
+tests
+.
+jar
+'
+)
+options
+.
+profilePath
+)
+return
+True
+return
+False
+def
 installChromeFile
 (
 self
@@ -5671,71 +5947,45 @@ filename
 options
 )
 :
-(
-path
-leaf
-)
+"
+"
+"
+copy
+tests
+.
+manifest
+to
+the
+profile
+directory
+so
+we
+can
+auto
+register
+with
+tests
+.
+jar
+"
+"
+"
+manifest
 =
 os
 .
 path
 .
-split
+join
 (
 options
 .
-app
-)
-manifestdir
-=
-os
-.
-path
-.
-join
-(
-path
-"
-distribution
-"
-"
-bundles
-"
-"
-mochitest
-"
-)
-if
-not
-os
-.
-path
-.
-exists
-(
-manifestdir
-)
-:
-os
-.
-makedirs
-(
-manifestdir
-)
-manifest
-=
-os
-.
-path
-.
-join
-(
-manifestdir
-"
-chrome
+profilePath
+'
+tests
 .
 manifest
-"
+'
 )
 shutil
 .
