--- a/testing/mochitest/Makefile.in
+++ b/testing/mochitest/Makefile.in
@@ -430,6 +430,39 @@ ssltunnel
 (
 NULL
 )
+NO_JS_MANIFEST
+=
+1
+MOZ_CHROME_FILE_FORMAT
+=
+jar
+DIST_FILES
+=
+install
+.
+rdf
+#
+Used
+in
+install
+.
+rdf
+USE_EXTENSION_MANIFEST
+=
+1
+XPI_NAME
+=
+mochijar
+#
+we
+turn
+this
+off
+for
+UNIVERSAL_BINARY
+CHROME_JAR
+=
+1
 include
 (
 topsrcdir
@@ -794,6 +827,40 @@ libs
 :
 :
 (
+cd
+(
+DIST
+)
+/
+xpi
+-
+stage
+&
+&
+tar
+(
+TAR_CREATE_FLAGS
+)
+-
+mochijar
+)
+|
+(
+cd
+(
+_DEST_DIR
+)
+&
+&
+tar
+-
+xf
+-
+)
+libs
+:
+:
+(
 _PYWEBSOCKET_FILES
 )
 (
@@ -1146,6 +1213,127 @@ DIST
 )
 /
 bin
+PKG_CHROMEJAR
+=
+(
+PKG_STAGE
+)
+/
+mochitest
+/
+content
+/
+ifdef
+CHROME_JAR
+stage
+-
+chromejar
+:
+(
+NSINSTALL
+)
+-
+D
+(
+PKG_CHROMEJAR
+)
+cp
+-
+RL
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+browser
+(
+PKG_CHROMEJAR
+)
+cp
+-
+RL
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+chrome
+(
+PKG_CHROMEJAR
+)
+ifdef
+ACCESSIBILITY
+cp
+-
+RL
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+a11y
+(
+PKG_CHROMEJAR
+)
+endif
+(
+cd
+(
+PKG_STAGE
+)
+/
+mochitest
+&
+&
+zip
+-
+r
+tests
+.
+jar
+content
+/
+)
+(
+rm
+-
+rf
+(
+PKG_CHROMEJAR
+)
+)
+stage
+-
+package
+:
+stage
+-
+chromejar
+endif
+(
+_DEST_DIR
+)
+:
+(
+NSINSTALL
+)
+-
+D
 stage
 -
 package
