--- a/toolkit/components/webapps/Makefile.in
+++ b/toolkit/components/webapps/Makefile.in
@@ -141,9 +141,8 @@ The
 Original
 Code
 is
-the
 Mozilla
-Browser
+Webapp
 code
 .
 #
@@ -157,9 +156,9 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+the
+Mozilla
+Foundation
 .
 #
 Portions
@@ -173,7 +172,7 @@ Copyright
 (
 C
 )
-2003
+2010
 #
 the
 Initial
@@ -191,22 +190,13 @@ s
 )
 :
 #
-Brian
-Ryner
+Fabrice
+Desr
 <
-bryner
-brianryner
+fabrice
+mozilla
 .
 com
->
-#
-Benjamin
-Smedberg
-<
-benjamin
-smedbergs
-.
-us
 >
 #
 #
@@ -406,6 +396,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -417,213 +410,83 @@ VPATH
 srcdir
 include
 (
-topsrcdir
+DEPTH
 )
 /
 config
 /
-config
+autoconf
 .
 mk
-#
-These
-component
-dirs
-are
-built
-for
-all
-apps
-(
-including
-suite
-)
-ifdef
-MOZ_ENABLE_XREMOTE
-PARALLEL_DIRS
-+
+MODULE_NAME
 =
-remote
-endif
-PARALLEL_DIRS
-+
-=
-\
-aboutmemory
-\
-apppicker
-\
-commandlines
-\
-console
-\
-contentprefs
-\
-cookie
-\
-exthelper
-\
-filepicker
-\
-find
-\
-microformats
-\
-parentalcontrols
-\
-passwordmgr
-\
-perf
-\
-places
-\
-prompts
-\
-startup
-\
-statusfilter
-\
-typeaheadfind
-\
-urlformatter
-\
-viewconfig
-\
 webapps
+MODULE
+=
+webapps
+LIBRARY_NAME
+=
+webapps_s
+LIBXUL_LIBRARY
+=
+1
+IS_COMPONENT
+=
+1
+EXPORT_LIBRARY
+=
+1
+REQUIRES
+=
+xpcom
+\
+string
 \
 (
 NULL
 )
-ifdef
-BUILD_CTYPES
-PARALLEL_DIRS
-+
-=
-\
-ctypes
-\
+ifeq
 (
-NULL
-)
-endif
-ifneq
+Android
 (
-(
-filter
-cocoa
-(
-MOZ_WIDGET_TOOLKIT
+OS_TARGET
 )
 )
-)
-TOOL_DIRS
-+
-=
-alerts
-else
-PARALLEL_DIRS
-+
-=
-alerts
-endif
-ifdef
-MOZ_FEEDS
-PARALLEL_DIRS
-+
-=
-feeds
-endif
-ifdef
-MOZ_HELP_VIEWER
-PARALLEL_DIRS
-+
-=
-help
-endif
-ifdef
-NS_PRINTING
-PARALLEL_DIRS
-+
-=
-printing
-endif
-ifdef
-MOZ_VIEW_SOURCE
-PARALLEL_DIRS
-+
-=
-viewsource
-endif
-ifdef
-MOZ_XUL
-PARALLEL_DIRS
-+
+CPPSRCS
 =
 \
-autocomplete
-\
-satchel
-\
-(
-NULL
-)
-endif
-ifdef
-MOZ_TOOLKIT_SEARCH
-PARALLEL_DIRS
-+
-=
-search
-endif
-ifdef
-MOZ_RDF
-PARALLEL_DIRS
-+
-=
-\
-downloads
-\
-intl
-\
-(
-NULL
-)
-endif
-ifdef
-MOZ_URL_CLASSIFIER
-PARALLEL_DIRS
-+
-=
-url
--
-classifier
-endif
-ifdef
-MOZ_FASTSTART
-PARALLEL_DIRS
-+
-=
-faststart
-endif
-DIRS
-+
-=
-\
-build
-\
-(
-NULL
-)
-EXTRA_PP_COMPONENTS
-=
-nsDefaultCLH
+nsWebappsSupport
 .
-js
-EXTRA_COMPONENTS
+cpp
+\
+(
+NULL
+)
+endif
+XPIDLSRCS
 =
-nsDefaultCLH
+nsIWebappsSupport
 .
-manifest
+idl
+EXTRA_DSO_LDOPTS
++
+=
+\
+(
+MOZ_COMPONENT_LIBS
+)
+\
+(
+XPCOM_GLUE_LDOPTS
+)
+\
+(
+NSPR_LIBS
+)
+\
+(
+NULL
+)
 include
 (
 topsrcdir
