Bug 592088 - support progress indicators in android status bar notifications r=blassey a=blocking-fennec
UltraBlame original commit: a3eadf884f811deccb9e982214cbbcb3d30f9321

--- a/embedding/android/Makefile.in
+++ b/embedding/android/Makefile.in
@@ -450,6 +450,10 @@ GeckoInputConnection
 .
 java
 \
+AlertNotification
+.
+java
+\
 (
 NULL
 )
@@ -681,51 +685,24 @@ icon64
 .
 png
 endif
-RES_DRAWABLE
+RES_LAYOUT
 =
 \
 res
 /
-drawable
+layout
 /
-alertaddons
+notification_progress
 .
-png
+xml
 \
 res
 /
-drawable
+layout
 /
-alertdownloads
+notification_progress_text
 .
-png
-\
-(
-NULL
-)
-RES_DRAWABLE_HDPI
-=
-\
-res
-/
-drawable
--
-hdpi
-/
-alertaddons
-.
-png
-\
-res
-/
-drawable
--
-hdpi
-/
-alertdownloads
-.
-png
-\
+xml
 (
 NULL
 )
@@ -1153,11 +1130,38 @@ cp
 (
 ICON_PATH_HDPI
 )
+ifdef
+MOZ_ANDROID_DRAWABLES
+RES_DRAWABLE
+=
+(
+addprefix
+res
+/
+drawable
+/
+(
+notdir
+(
+MOZ_ANDROID_DRAWABLES
+)
+)
+)
 (
 RES_DRAWABLE
 )
 :
 (
+addprefix
+(
+topsrcdir
+)
+/
+(
+MOZ_ANDROID_DRAWABLES
+)
+)
+(
 NSINSTALL
 )
 -
@@ -1165,59 +1169,56 @@ D
 res
 /
 drawable
-cp
 (
-topsrcdir
+NSINSTALL
 )
-/
-mobile
-/
-app
-/
-android
-/
-drawable
-/
-*
+^
 res
 /
 drawable
 /
+endif
 (
-RES_DRAWABLE_HDPI
+RES_LAYOUT
 )
 :
 (
+subst
+res
+/
+(
+srcdir
+)
+/
+resources
+/
+(
+RES_LAYOUT
+)
+)
+(
 NSINSTALL
 )
 -
 D
 res
 /
-drawable
--
-hdpi
-cp
+layout
 (
-topsrcdir
+NSINSTALL
+)
+(
+srcdir
 )
 /
-mobile
+resources
 /
-app
-/
-android
-/
-drawable
--
-hdpi
+layout
 /
 *
 res
 /
-drawable
--
-hdpi
+layout
 /
 R
 .
@@ -1227,10 +1228,10 @@ java
 MOZ_APP_ICON
 )
 (
-RES_DRAWABLE
+RES_LAYOUT
 )
 (
-RES_DRAWABLE_HDPI
+RES_DRAWABLE
 )
 res
 /
@@ -1305,10 +1306,10 @@ icon
 .
 png
 (
-RES_DRAWABLE
+RES_LAYOUT
 )
 (
-RES_DRAWABLE_HDPI
+RES_DRAWABLE
 )
 res
 /
