--- a/embedding/android/NotificationHandler.java.in
+++ b/embedding/android/NotificationHandler.java.in
@@ -693,24 +693,6 @@ ID
 notificationID
 )
 ;
-NotificationManager
-notificationManager
-=
-(
-NotificationManager
-)
-getSystemService
-(
-NOTIFICATION_SERVICE
-)
-;
-notificationManager
-.
-cancel
-(
-notificationID
-)
-;
 if
 (
 App
@@ -739,6 +721,38 @@ handleNotification
 action
 alertName
 alertCookie
+)
+;
+}
+else
+{
+/
+/
+The
+app
+is
+not
+running
+just
+cancel
+this
+notification
+NotificationManager
+notificationManager
+=
+(
+NotificationManager
+)
+getSystemService
+(
+NOTIFICATION_SERVICE
+)
+;
+notificationManager
+.
+cancel
+(
+notificationID
 )
 ;
 }
