Backed out changeset 7e10dcf5f763 (bug 590225) due to bustage, a=me
UltraBlame original commit: 70fe427ed0fc38487c863625c6cf0b4c719a6b58

--- a/embedding/android/AndroidManifest.xml.in
+++ b/embedding/android/AndroidManifest.xml.in
@@ -157,27 +157,6 @@ WRITE_EXTERNAL_STORAGE
 /
 >
 <
-uses
--
-permission
-android
-:
-name
-=
-"
-com
-.
-android
-.
-launcher
-.
-permission
-.
-INSTALL_SHORTCUT
-"
-/
->
-<
 application
 android
 :
@@ -248,7 +227,7 @@ android
 launchMode
 =
 "
-singleInstance
+singleTop
 "
 >
 <
