--- a/configure.in
+++ b/configure.in
@@ -38147,6 +38147,8 @@ MOZ_ZIPWRITER
 NS_PRINTING
 =
 1
+MOZ_DISABLE_DOMCRYPTO
+=
 NSS_DISABLE_DBM
 =
 NECKO_WIFI
@@ -53868,6 +53870,138 @@ AC_SUBST
 (
 MOZ_DISABLE_PARENTAL_CONTROLS
 )
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
+Disable
+DOMCrypto
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+if
+test
+-
+n
+"
+MOZ_DISABLE_DOMCRYPTO
+"
+;
+then
+AC_DEFINE
+(
+MOZ_DISABLE_DOMCRYPTO
+)
+fi
 dnl
 =
 =
