Bug 601470: Promote GetSourceDataSize & GetDecodedDataSize from RasterImage to Image superclass, and add implementations for VectorImage. r=joe a=joe
UltraBlame original commit: d262762e4f87ca99d5cae3a98bc777ec288dfb77

--- a/modules/libpr0n/test/mochitest/Makefile.in
+++ b/modules/libpr0n/test/mochitest/Makefile.in
@@ -439,6 +439,10 @@ imgutils
 .
 js
 \
+lime100x100
+.
+svg
+\
 test_bug399925
 .
 html
@@ -560,6 +564,10 @@ bug497665
 sjs
 \
 test_bug553982
+.
+html
+\
+test_bug601470
 .
 html
 \
