Bug 599367: Set content type on moz-filedata channels. r=sicking a=blocking-beta-8
UltraBlame original commit: a0699cc12503412e55ca6e10132dbda2b47dd583

--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -1740,23 +1740,27 @@ test_range_bounds
 .
 html
 \
-test_bug543870
+test_mozfiledataurl
 .
 html
 \
-file_bug543870_img
+file_mozfiledataurl_audio
+.
+ogg
+\
+file_mozfiledataurl_img
 .
 jpg
 \
-file_bug543870_inner
+file_mozfiledataurl_inner
 .
 html
 \
-file_bug543870_doc
+file_mozfiledataurl_doc
 .
 html
 \
-file_bug543870_text
+file_mozfiledataurl_text
 .
 txt
 \
