--- a/Makefile.in
+++ b/Makefile.in
@@ -635,6 +635,22 @@ topsrcdir
 )
 /
 configure
+(
+topsrcdir
+)
+/
+js
+/
+src
+/
+configure
+config
+.
+status
+js
+/
+src
+/
 config
 .
 status
@@ -768,6 +784,102 @@ succeed
 "
 exit
 1
+(
+topsrcdir
+)
+/
+js
+/
+src
+/
+configure
+:
+(
+topsrcdir
+)
+/
+js
+/
+src
+/
+configure
+.
+in
+echo
+"
+STOP
+!
+js
+/
+src
+/
+configure
+.
+in
+has
+changed
+and
+your
+js
+/
+src
+/
+configure
+is
+out
+of
+date
+.
+"
+echo
+"
+Please
+rerun
+autoconf
+in
+js
+/
+src
+and
+re
+-
+configure
+your
+build
+directory
+.
+"
+echo
+"
+To
+ignore
+this
+message
+touch
+'
+js
+/
+src
+/
+configure
+'
+in
+the
+source
+directory
+"
+echo
+"
+but
+your
+build
+might
+not
+succeed
+.
+"
+exit
+1
 config
 .
 status
@@ -810,6 +922,89 @@ this
 message
 touch
 '
+config
+.
+status
+'
+in
+the
+build
+directory
+"
+echo
+"
+but
+your
+build
+might
+not
+succeed
+.
+"
+exit
+1
+js
+/
+src
+/
+config
+.
+status
+:
+(
+topsrcdir
+)
+/
+js
+/
+src
+/
+configure
+echo
+"
+STOP
+!
+js
+/
+src
+/
+configure
+has
+changed
+and
+needs
+to
+be
+run
+in
+this
+build
+directory
+.
+"
+echo
+"
+Please
+rerun
+js
+/
+src
+/
+configure
+.
+"
+echo
+"
+To
+ignore
+this
+message
+touch
+'
+js
+/
+src
+/
 config
 .
 status
