Bug 600540: Disable raw video by default. r=cpearce a=beltzer
UltraBlame original commit: a701d821ef362fc3ea6ceddfcd53f1ccd6300b8b

--- a/configure.in
+++ b/configure.in
@@ -46221,7 +46221,7 @@ dnl
 =
 dnl
 =
-Disable
+Enable
 Raw
 Codecs
 dnl
@@ -46281,16 +46281,16 @@ dnl
 =
 =
 =
-MOZ_ARG_DISABLE_BOOL
+MOZ_ARG_ENABLE_BOOL
 (
 raw
 [
 -
 -
-disable
+enable
 -
 raw
-Disable
+Enable
 support
 for
 RAW
@@ -46298,9 +46298,9 @@ media
 ]
 MOZ_RAW
 =
+1
 MOZ_RAW
 =
-1
 )
 if
 test
