--- a/browser/components/extensions/test/browser/browser-common.ini
+++ b/browser/components/extensions/test/browser/browser-common.ini
@@ -711,6 +711,28 @@ browser_ext_tabs_create
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+linux
+"
+&
+&
+debug
+&
+&
+bits
+=
+=
+32
+#
+Bug
+1350189
 [
 browser_ext_tabs_create_invalid_url
 .
