Backed out changeset 3a1d45b3084d (bug 1406551) for leaks and frequently failing new devtools test devtools/client/debugger/new/test/mochitest/browser_dbg-wasm-sourcemaps.js. r=backout a=backout
MozReview-Commit-ID: 6NxdP26SSKw

UltraBlame original commit: 2ed5e7fbf39e949693d8a7455d6313b14a7aeaf6

--- a/devtools/client/debugger/new/test/mochitest/browser.ini
+++ b/devtools/client/debugger/new/test/mochitest/browser.ini
@@ -180,27 +180,6 @@ js
 map
 examples
 /
-reload
-/
-code_reload_1
-.
-js
-examples
-/
-reload
-/
-code_reload_2
-.
-js
-examples
-/
-reload
-/
-doc_reload
-.
-html
-examples
-/
 doc
 -
 async
@@ -433,13 +412,6 @@ examples
 times2
 .
 js
-examples
-/
-reload
-/
-sjs_code_reload
-.
-sjs
 [
 browser_dbg
 -
@@ -528,6 +500,13 @@ js
 [
 browser_dbg
 -
+expressions
+.
+js
+]
+[
+browser_dbg
+-
 scopes
 .
 js
@@ -598,22 +577,6 @@ browser_dbg
 editor
 -
 highlight
-.
-js
-]
-[
-browser_dbg
--
-expressions
-.
-js
-]
-[
-browser_dbg
--
-expressions
--
-error
 .
 js
 ]
@@ -868,10 +831,8 @@ sourcemaps
 .
 js
 ]
-[
-browser_dbg
+skip
 -
-reload
-.
-js
-]
+if
+=
+true
