Bug 1399633 - Disable /webdriver/tests/contexts/maximize_window.py on linux for frequent failures. r=me, a=test-only
UltraBlame original commit: bd5dbfc14551656f5b5c1c0c3f3294d3e8c544c1

--- a/testing/web-platform/meta/webdriver/tests/contexts/maximize_window.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/contexts/maximize_window.py.ini
@@ -6,25 +6,32 @@ py
 type
 :
 wdspec
-[
-maximize_window
+disabled
+:
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+:
+https
+:
+/
+/
+bugzilla
 .
-py
-:
-:
-test_handle_prompt_accept
-]
-expected
-:
-FAIL
-[
-maximize_window
+mozilla
 .
-py
-:
-:
-test_handle_prompt_missing_value
-]
-expected
-:
-FAIL
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1399633
