Bug 1403307 - Disable dom/media/test/test_mediarecorder_pause_resume_video.html on debug for frequent failures. r=me, a=test-only
UltraBlame original commit: f8a337cc1e677266d9711e54e6024061460d7e96

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -7589,12 +7589,18 @@ toolkit
 '
 android
 '
+|
+|
+debug
 #
 android
 (
 bug
 1232305
 )
+debug
+Bug
+1403307
 [
 test_mediarecorder_playback_can_repeat
 .
