Bug 1406278: Part 2b - Use subject principal as triggering principal in <img> "src" attribute. r=bz
MozReview-Commit-ID: DrblTjP99WJ

UltraBlame original commit: 9fca7bef9dfe04ab94ef14021dd14a76721af651

--- a/toolkit/components/extensions/test/xpcshell/xpcshell-content.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-content.ini
@@ -42,6 +42,11 @@ test_ext_contentscript_scriptCreated
 js
 ]
 [
+test_ext_contentscript_triggeringPrincipal
+.
+js
+]
+[
 test_ext_contentscript_xrays
 .
 js
