--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -3241,6 +3241,9 @@ InheritTarget
 URLMatchingFunction
 "
 "
+StyleAnimation
+"
+"
 StyleRuleInclusion
 "
 "
@@ -3357,9 +3360,6 @@ RawServoDeclarationBlockStrong
 RawGeckoPresContext
 "
 "
-RawGeckoStyleAnimationList
-"
-"
 RawGeckoXBLBinding
 "
 ]
@@ -3405,6 +3405,9 @@ RawGeckoServoStyleRuleList
 "
 "
 RawGeckoServoAnimationValueList
+"
+"
+RawGeckoStyleAnimationList
 "
 "
 RawGeckoStyleChildrenIterator
