Bug 1405790 - supply FontInstancePlatformOptions to WebRender. r=jrmuizel
Patch originally developed in bug 1406138, but landed in bug 1405790 since it
needs to land together with the upstream WR changes in PR 1816.

MozReview-Commit-ID: IHVoKhVncd5

UltraBlame original commit: 179ba985f5f9127f5a8df550a53d74379f4a7ff3

--- a/gfx/webrender_bindings/cbindgen.toml
+++ b/gfx/webrender_bindings/cbindgen.toml
@@ -251,3 +251,24 @@ enum
 add_sentinel
 =
 true
+[
+defines
+]
+"
+target_os
+=
+windows
+"
+=
+"
+XP_WIN
+"
+"
+target_os
+=
+macos
+"
+=
+"
+XP_MACOSX
+"
