Bug 1386513 - Handle cases of pasted bookmarks not being in the database, to fix copying bookmarks across browser instances. r=mak
MozReview-Commit-ID: Lv2DT0WQGhZ

UltraBlame original commit: eac9a60e4edb9f8d69248d108f2d4510c7306bf4

--- a/browser/components/places/tests/browser/browser.ini
+++ b/browser/components/places/tests/browser/browser.ini
@@ -282,6 +282,14 @@ browser_markPageAsFollowedLink
 js
 ]
 [
+browser_paste_bookmarks
+.
+js
+]
+subsuite
+=
+clipboard
+[
 browser_paste_into_tags
 .
 js
