Bug 1366355 - Expand talos tp6 suite to linux x64; r=jmaher
MozReview-Commit-ID: CXMTg3SImxz

UltraBlame original commit: 0ac0d5e4f5567516e99e99f8ad7d3f62fed8f908

--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -351,6 +351,18 @@ perf
 reftest
 -
 singletons
+-
+talos
+-
+tp6
+-
+talos
+-
+tp6
+-
+stylo
+-
+threads
 awsy
 :
 -
@@ -719,6 +731,14 @@ perf
 reftest
 -
 singletons
+-
+stylo
+-
+disabled
+-
+talos
+-
+tp6
 -
 stylo
 -
