--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -10165,9 +10165,6 @@ autoland
 '
 try
 '
-'
-date
-'
 ]
 macosx
 .
@@ -10189,6 +10186,27 @@ try
 default
 :
 [
+'
+mozilla
+-
+beta
+'
+'
+mozilla
+-
+central
+'
+'
+mozilla
+-
+inbound
+'
+'
+autoland
+'
+'
+try
+'
 ]
 max
 -
@@ -10364,6 +10382,19 @@ try
 default
 :
 [
+'
+mozilla
+-
+beta
+'
+'
+mozilla
+-
+central
+'
+'
+try
+'
 ]
 max
 -
@@ -10538,6 +10569,27 @@ try
 default
 :
 [
+'
+mozilla
+-
+beta
+'
+'
+mozilla
+-
+central
+'
+'
+mozilla
+-
+inbound
+'
+'
+autoland
+'
+'
+try
+'
 ]
 max
 -
@@ -10679,9 +10731,6 @@ autoland
 '
 '
 try
-'
-'
-date
 '
 ]
 default
