Bug 1395853 - Add a mochitest for audio codec content flow across a PeerConnection. r=jib
MozReview-Commit-ID: 8cb7fgR5nO7

UltraBlame original commit: 37ca45926c5b428f5d0894f6e9d4845c63ea9768

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -785,6 +785,35 @@ on
 emulator
 )
 [
+test_peerConnection_audioCodecs
+.
+html
+]
+skip
+-
+if
+=
+(
+android_version
+=
+=
+'
+18
+'
+)
+#
+android
+(
+Bug
+1189784
+timeouts
+on
+4
+.
+3
+emulator
+)
+[
 test_peerConnection_basicAudio
 .
 html
