Bug 1395853 - Add a mochitest for video codec content flow across peerconnection. r=jib
MozReview-Commit-ID: 2mZ9LkRWden

UltraBlame original commit: 2791d2ecdc0840cab8d08e88b75d6601e4acdec6

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -3034,6 +3034,33 @@ on
 emulator
 )
 [
+test_peerConnection_videoCodecs
+.
+html
+]
+skip
+-
+if
+=
+android_version
+=
+=
+'
+18
+'
+#
+android
+(
+Bug
+1189784
+timeouts
+on
+4
+.
+3
+emulator
+)
+[
 test_peerConnection_audioRenegotiationInactiveAnswer
 .
 html
