Bug 1395202 - Part 3: Create a testcase for nsICacheInfoChannel::cacheEntryId. r=michal, f=junior
UltraBlame original commit: 7598b4ed02f6f7bd14693b62f4ba61b8ae91315a

--- a/netwerk/test/unit_ipc/xpcshell.ini
+++ b/netwerk/test/unit_ipc/xpcshell.ini
@@ -67,6 +67,21 @@ test
 /
 unit
 /
+test_cache
+-
+entry
+-
+id
+.
+js
+!
+/
+netwerk
+/
+test
+/
+unit
+/
 test_cache_jar
 .
 js
@@ -668,6 +683,15 @@ js
 ]
 [
 test_cacheflags_wrap
+.
+js
+]
+[
+test_cache
+-
+entry
+-
+id_wrap
 .
 js
 ]
