Bug 1405018 - Move Get Active Element test to the tests directory. r=maja_zf
MozReview-Commit-ID: KoblLlmFein

UltraBlame original commit: 74c188cf79dc04e1caae787210a3a8e004db57da

--- a/testing/web-platform/meta/webdriver/tests/element_retrieval/get_active_element.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/element_retrieval/get_active_element.py.ini
@@ -1,5 +1,5 @@
 [
-active
+get_active_element
 .
 py
 ]
@@ -7,7 +7,7 @@ type
 :
 wdspec
 [
-active
+get_active_element
 .
 py
 :
@@ -18,7 +18,7 @@ expected
 :
 FAIL
 [
-active
+get_active_element
 .
 py
 :
@@ -29,7 +29,7 @@ expected
 :
 FAIL
 [
-active
+get_active_element
 .
 py
 :
@@ -40,7 +40,7 @@ expected
 :
 FAIL
 [
-active
+get_active_element
 .
 py
 :
