Bug 1402015 - Submit re-compressed MAR metadata to Balrog r=sfraser a=release DONTBUILD
MozReview-Commit-ID: DuJxPBErAhg

UltraBlame original commit: 70b3fb79bc92e26af03c2cf16445975b30346781

--- a/taskcluster/docker/funsize-balrog-submitter/Dockerfile
+++ b/taskcluster/docker/funsize-balrog-submitter/Dockerfile
@@ -221,6 +221,14 @@ sh
 runme
 .
 sh
+COPY
+submit_complete
+.
+sh
+/
+submit_complete
+.
+sh
 RUN
 chmod
 755
@@ -234,6 +242,10 @@ bin
 *
 /
 runme
+.
+sh
+/
+submit_complete
 .
 sh
 ENV
