Bug 1406551 - Update Debugger frontend (10-8). r=jdescottes
MozReview-Commit-ID: GKTM3rLKlTX

UltraBlame original commit: 656d53c7fd810507564844a6b0b732c116ad8efd

--- a/devtools/client/debugger/new/test/mochitest/browser.ini
+++ b/devtools/client/debugger/new/test/mochitest/browser.ini
@@ -180,6 +180,27 @@ js
 map
 examples
 /
+reload
+/
+code_reload_1
+.
+js
+examples
+/
+reload
+/
+code_reload_2
+.
+js
+examples
+/
+reload
+/
+doc_reload
+.
+html
+examples
+/
 doc
 -
 async
@@ -412,6 +433,13 @@ examples
 times2
 .
 js
+examples
+/
+reload
+/
+sjs_code_reload
+.
+sjs
 [
 browser_dbg
 -
@@ -500,13 +528,6 @@ js
 [
 browser_dbg
 -
-expressions
-.
-js
-]
-[
-browser_dbg
--
 scopes
 .
 js
@@ -577,6 +598,22 @@ browser_dbg
 editor
 -
 highlight
+.
+js
+]
+[
+browser_dbg
+-
+expressions
+.
+js
+]
+[
+browser_dbg
+-
+expressions
+-
+error
 .
 js
 ]
@@ -836,3 +873,10 @@ skip
 if
 =
 true
+[
+browser_dbg
+-
+reload
+.
+js
+]
