Bug 1347644 - Baldr: implement ConsumeStreamCallback in browser (r=bkelly)
MozReview-Commit-ID: DXv2MegefDw

UltraBlame original commit: 2db8ced6f6cc86bf9a21427ee1afac0cc52b1742

--- a/dom/promise/tests/mochitest.ini
+++ b/dom/promise/tests/mochitest.ini
@@ -85,6 +85,19 @@ test_webassembly_compile
 .
 html
 ]
+support
+-
+files
+=
+test_webassembly_compile_sample
+.
+wasm
+test_webassembly_compile_worker
+.
+js
+test_webassembly_compile_worker_terminate
+.
+js
 [
 test_promise_argument
 .
