Bug 1401090 - Disable test_FrameSelection.html,test_HaveMetadataUnbufferedSeek.html,test_EndedEvent.html on android for frequent failures. r=me, a=test-only
UltraBlame original commit: 2b5bef1c1595fe9dd0cc8c30944af31504123ad3

--- a/dom/media/mediasource/test/mochitest.ini
+++ b/dom/media/mediasource/test/mochitest.ini
@@ -1030,9 +1030,19 @@ android_version
 '
 22
 '
+|
+|
+toolkit
+=
+=
+'
+android
+'
 #
 bug
 1358640
+bug
+1401090
 [
 test_EndOfStream
 .
@@ -1097,9 +1107,19 @@ android_version
 '
 22
 '
+|
+|
+toolkit
+=
+=
+'
+android
+'
 #
 bug
 1341519
+bug
+1401090
 [
 test_FrameSelection_mp4
 .
@@ -1135,9 +1155,19 @@ android_version
 '
 22
 '
+|
+|
+toolkit
+=
+=
+'
+android
+'
 #
 bug
 1342247
+bug
+1401090
 [
 test_HaveMetadataUnbufferedSeek_mp4
 .
