Bug 1302199 - Disable dom/canvas/test/webgl-mochitest/test_pixel_pack_buffer.html on windows for frequent failures. r=me, a=test-only
UltraBlame original commit: 18b0835d80c008625f93086f35d2ceace707deac

--- a/dom/canvas/test/webgl-mochitest/mochitest.ini
+++ b/dom/canvas/test/webgl-mochitest/mochitest.ini
@@ -821,6 +821,29 @@ test_pixel_pack_buffer
 .
 html
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+win
+"
+&
+&
+os_version
+=
+=
+"
+10
+.
+0
+"
+#
+Bug
+1302199
 [
 test_privileged_exts
 .
