Bug 1390893 - Run test-verify on Windows and osx, as tier 3; r=jmaher
UltraBlame original commit: 1eca387652fe3fe189c62c8679ef24bed67d2f1d

--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -822,6 +822,10 @@ no
 -
 accel
 -
+test
+-
+verify
+-
 web
 -
 platform
@@ -1101,6 +1105,10 @@ mochitest
 webgl
 -
 reftest
+-
+test
+-
+verify
 -
 web
 -
