Bug 1380755 - Examine & report on frame-ancestors CSP in report-only mode. r=ckerschb
Despite what the comment here says, there is nowhere in the W3C CSP spec stating
that frame-ancestors should be ignored in report-only mode.

UltraBlame original commit: f8ee927a4c3761592bb971081ee0fd839818eed2

--- a/dom/security/test/csp/mochitest.ini
+++ b/dom/security/test/csp/mochitest.ini
@@ -360,6 +360,15 @@ html
 ^
 headers
 ^
+file_frame_ancestors_ro
+.
+html
+file_frame_ancestors_ro
+.
+html
+^
+headers
+^
 file_hash_source
 .
 html
@@ -970,6 +979,11 @@ html
 ]
 [
 test_bug1229639
+.
+html
+]
+[
+test_frame_ancestors_ro
 .
 html
 ]
