--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -2463,6 +2463,296 @@ record_in_processes
 :
 -
 main
+browser_home_page_change
+:
+bug_numbers
+:
+-
+1392951
+description
+:
+>
+-
+The
+number
+of
+times
+the
+home
+page
+has
+been
+changed
+.
+Recorded
+when
+a
+user
+changes
+his
+/
+her
+home
+page
+successfully
+.
+expires
+:
+"
+62
+"
+kind
+:
+uint
+keyed
+:
+true
+notification_emails
+:
+-
+chsiang
+mozilla
+.
+com
+release_channel_collection
+:
+opt
+-
+out
+record_in_processes
+:
+-
+main
+browser_home_page_count
+:
+bug_numbers
+:
+-
+1392951
+description
+:
+>
+-
+Each
+key
+is
+the
+number
+of
+home
+page
+urls
+when
+users
+change
+their
+home
+page
+multiple
+home
+pages
+can
+be
+set
+(
+delineated
+with
+a
+"
+|
+"
+)
+and
+each
+value
+is
+the
+number
+of
+times
+that
+key
+is
+recorded
+.
+The
+telemetry
+data
+will
+be
+recorded
+if
+a
+user
+changes
+his
+/
+her
+home
+page
+successfully
+.
+expires
+:
+"
+62
+"
+kind
+:
+uint
+keyed
+:
+true
+notification_emails
+:
+-
+chsiang
+mozilla
+.
+com
+release_channel_collection
+:
+opt
+-
+out
+record_in_processes
+:
+-
+main
+use_current_page
+:
+bug_numbers
+:
+-
+1392951
+description
+:
+>
+-
+The
+number
+of
+times
+the
+Use
+Current
+Page
+button
+has
+been
+clicked
+.
+Recorded
+when
+a
+a
+user
+clicks
+the
+"
+Use
+Current
+Page
+"
+button
+.
+expires
+:
+"
+62
+"
+kind
+:
+uint
+keyed
+:
+true
+notification_emails
+:
+-
+chsiang
+mozilla
+.
+com
+release_channel_collection
+:
+opt
+-
+out
+record_in_processes
+:
+-
+main
+use_bookmark
+:
+bug_numbers
+:
+-
+1392951
+description
+:
+>
+-
+The
+number
+of
+times
+the
+"
+Use
+Bookmark
+.
+.
+.
+"
+button
+has
+been
+clicked
+.
+Recorded
+when
+a
+a
+user
+clicks
+the
+"
+Use
+Bookmark
+.
+.
+.
+"
+button
+.
+expires
+:
+"
+62
+"
+kind
+:
+uint
+keyed
+:
+true
+notification_emails
+:
+-
+chsiang
+mozilla
+.
+com
+release_channel_collection
+:
+opt
+-
+out
+record_in_processes
+:
+-
+main
 #
 The
 following
@@ -4385,84 +4675,6 @@ record_in_processes
 -
 '
 main
-'
-gfx
-.
-omtp
-:
-paint_wait_ratio
-:
-bug_numbers
-:
--
-1386968
-description
-:
->
-Ratio
-(
-in
-units
-of
-1
-/
-100th
-of
-a
-percent
-)
-of
-how
-many
-times
-OMTP
-waited
-for
-a
-paint
-for
-more
-than
-200us
-versus
-the
-total
-number
-of
-paints
-.
-keyed
-:
-false
-kind
-:
-uint
-expires
-:
-"
-61
-"
-notification_emails
-:
--
-gfx
--
-telemetry
--
-alerts
-mozilla
-.
-com
--
-danderson
-mozilla
-.
-com
-record_in_processes
-:
--
-'
-content
 '
 #
 The
