Backed out changeset 2f3dd84d4d22 (bug 1407178) for frequently failing enabled test. r=backout
UltraBlame original commit: a97a53dfbaeb7373969c73a39f6e4c004577aa23

--- a/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
+++ b/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
@@ -2156,6 +2156,31 @@ browser_webconsole_certificate_messages
 .
 js
 ]
+skip
+-
+if
+=
+true
+#
+Bug
+1401881
+#
+old
+console
+skip
+-
+if
+=
+e10s
+#
+Bug
+1042253
+-
+webconsole
+tests
+disabled
+with
+e10s
 [
 browser_webconsole_charset
 .
