Bug 1404925 - Add tc configs for new talos speedometer test job; r=jmaher
MozReview-Commit-ID: Dkoh60jcKsL

UltraBlame original commit: 888796477f5516ec5a6bbc59f19a6c3d4191a72a

--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -363,6 +363,10 @@ tp6
 stylo
 -
 threads
+-
+talos
+-
+speedometer
 awsy
 :
 -
@@ -553,6 +557,10 @@ perf
 reftest
 -
 singletons
+-
+talos
+-
+speedometer
 qr
 -
 tests
@@ -729,6 +737,14 @@ tp6
 stylo
 -
 disabled
+-
+talos
+-
+speedometer
+-
+stylo
+-
+disabled
 windows
 -
 reftest
@@ -822,10 +838,6 @@ no
 -
 accel
 -
-test
--
-verify
--
 web
 -
 platform
@@ -911,6 +923,10 @@ tp6
 stylo
 -
 threads
+-
+talos
+-
+speedometer
 windows
 -
 talos
@@ -1025,6 +1041,14 @@ disabled
 talos
 -
 tp6
+-
+stylo
+-
+disabled
+-
+talos
+-
+speedometer
 -
 stylo
 -
@@ -1106,10 +1130,6 @@ webgl
 -
 reftest
 -
-test
--
-verify
--
 web
 -
 platform
@@ -1191,6 +1211,10 @@ tp6
 stylo
 -
 threads
+-
+talos
+-
+speedometer
 macosx64
 -
 talos
@@ -1297,6 +1321,14 @@ disabled
 talos
 -
 tp6
+-
+stylo
+-
+disabled
+-
+talos
+-
+speedometer
 -
 stylo
 -
