Bug 1404843 - Enable and rename browser_jsterm_dollar.js; r=Honza
MozReview-Commit-ID: 81tYed0VL0K

UltraBlame original commit: c3dac33653b75e420362d0faf4169eb8958100a8

--- a/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
+++ b/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
@@ -547,17 +547,6 @@ test
 -
 bug
 -
-621644
--
-jsterm
--
-dollar
-.
-html
-test
--
-bug
--
 630733
 -
 response
@@ -1284,6 +1273,13 @@ image
 png
 test
 -
+jsterm
+-
+dollar
+.
+html
+test
+-
 location
 -
 debugger
@@ -1763,6 +1759,11 @@ debug
 devtools
 for
 timeouts
+[
+browser_jsterm_dollar
+.
+js
+]
 [
 browser_jsterm_history_persist
 .
@@ -3157,19 +3158,6 @@ debug
 devtools
 for
 timeouts
-[
-browser_webconsole_jsterm_dollar
-.
-js
-]
-skip
--
-if
-=
-true
-#
-Bug
-1404843
 [
 browser_webconsole_keyboard_accessibility
 .
