--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -4110,6 +4110,28 @@ toolkit
 android
 '
 [
+test_webSocket_sandbox
+.
+html
+]
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
+support
+-
+files
+=
+iframe_webSocket_sandbox
+.
+html
+[
 test_websocket1
 .
 html
