--- a/browser/extensions/formautofill/test/mochitest/mochitest.ini
+++ b/browser/extensions/formautofill/test/mochitest/mochitest.ini
@@ -93,6 +93,14 @@ scheme
 =
 https
 [
+test_creditcard_autocomplete_off
+.
+html
+]
+scheme
+=
+https
+[
 test_formautofill_preview_highlight
 .
 html
