--- a/taskcluster/docker/android-build/Dockerfile
+++ b/taskcluster/docker/android-build/Dockerfile
@@ -423,6 +423,29 @@ add
 -
 architecture
 i386
+#
+rsync
+is
+required
+for
+l10n
+single
+locale
+repacks
+.
+less
+screen
+and
+#
+vim
+help
+debugging
+interactive
+tasks
+in
+Task
+Cluster
+.
 RUN
 apt
 -
@@ -473,6 +496,8 @@ file
 \
 gnupg
 \
+less
+\
 make
 \
 procps
@@ -499,6 +524,10 @@ python
 -
 virtualenv
 \
+rsync
+\
+screen
+\
 sudo
 \
 tar
@@ -506,6 +535,8 @@ tar
 unzip
 \
 uuid
+\
+vim
 \
 wget
 \
